# boo

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: bench.rs
examples/: simple.rs  types-showcase.rs
src/: lib.rs  literal_bytes.rs  test.rs  utils.rs
tests/: test.rs
